# CookieOne

./: .gitignore  BUILD_README.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE-STR.txt  QUICKSTART.md  QUICK_START.md  QUICK_START_BUILD.md  README.md  RELEASE_REPORT.md  WAKEWORD_EXPLANATION.md  build.bat  build.ps1  build_cookieone.py  requirements-build.txt  setup_build_env.bat  setup_build_env.sh
app/: Cargo.toml  build.rs  config.json
app/assets/phrases/: jarvis_style.json
app/assets/wakeword/: cookie.mww  cookie.rpw
app/commands/: README.md  commands.json
app/src/: audio.rs  audio_pipeline.rs  commands.rs  config.rs  jarvis.rs  main.rs  persona.rs  recorder.rs  wakeword.rs
app/src/stt/: gemini_audio.rs  mod.rs  vosk.rs  vosk_engine.rs
app/src/wakeword/: mod.rs  rustpotter.rs
gui/: COMMANDS_IMPLEMENTATION_STATUS.md  IMPLEMENTED_FEATURES.md  RELEASE_NOTES.md  UI_IMPLEMENTATION_STATUS.md  package-lock.json
gui/commands/: README.md
gui/commands/automation/: command.yaml
gui/commands/custom/: command.yaml
gui/commands/info/: command.yaml
gui/commands/media/: command.yaml
gui/commands/system/: command.yaml
gui/src/: App.svelte  Events.svelte  functions.ts  stores.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: assistant_commands.rs  audio.rs  commands.rs  config.rs  db.rs  events.rs  listener.rs  log.rs  main.rs  recorder.rs  stt.rs  tauri_commands.rs  tray.rs  vosk.rs
gui/src-tauri/src/config/: structs.rs
gui/src-tauri/src/db/: structs.rs
gui/src-tauri/src/listener/: porcupine.rs
gui/src-tauri/src/stt/: gemini.rs
gui/src-tauri/src/tauri_commands/: commands.rs  config.rs  db.rs  etc.rs  fs.rs  listener.rs  listener_stub.txt  onboarding.rs  sys.rs  voice.rs
gui/src/components/: CommandsView.svelte  LogsPanel.svelte  SettingsModal.svelte  StatusBar.svelte
gui/src/css/: styles.scss
gui/src/pages/: commands.svelte  index.svelte  onboarding.svelte  settings.svelte
microwakeword/: Cargo.toml  README.md
microwakeword/src/: lib.rs
scripts/: generate_commands.py
