[package]
name = "jarvis-app"
version = "0.0.3"
description = "Jarvis Voice Assistant"
authors = ["Abraham Tugalov"]
license = "GPL-3.0-only"
repository = "https://github.com/Priler/jarvis"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Audio I/O
cpal = "0.16"
hound = "3.5"

# Speech Recognition
vosk = "0.3.1"
microwakeword = { path = "../microwakeword" }

# Networking
reqwest = { version = "0.12", features = ["json", "blocking"] }
base64 = "0.22"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
simple-log = "1.6"

# Utilities
fastrand = "2.0"
once_cell = "1.18"
atomic_enum = "0.2"
platform-dirs = "0.3"
parking_lot = "0.12"
crossbeam = "0.8"

# Audio Playback
rodio = "0.19"
kira = "0.9"

# GUI/Tray
tray-icon = "0.18"
winit = "0.30"
image = "0.25"

[features]
