[package]
name = "cookie-assistant"
version = "0.1.0"
description = "Cookie Voice Assistant - Оффлайн голосовой ассистент"
authors = ["Cookie Team"]
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
# Аудио
cpal = "0.15"
hound = "3.5"
rodio = "0.17"

# Wake-word detection  
rustpotter = { git = "https://github.com/GiviMAD/rustpotter.git", tag = "v2.0.0", optional = true }

# STT движки
vosk = "0.3"

# HTTP клиент для Gemini API
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Сериализация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Ошибки
anyhow = "1.0"
thiserror = "1.0"

# Логирование
log = "0.4"
env_logger = "0.11"

# Система путей
directories = "5.0"

# Утилиты
once_cell = "1.18"
fastrand = "2.0"
parking_lot = "0.12"
crossbeam = "0.8"
base64 = "0.21"

# Фиксируем версии для совместимости с candle-core
rand = "0.8.5"
half = "2.2"

[features]
default = ["rustpotter-wakeword"]
rustpotter-wakeword = ["rustpotter"]
