[package]
name = "jarvis-app"
version = "0.0.3"
description = "Jarvis Voice Assistant"
authors = ["Abraham Tugalov"]
license = "GPL-3.0-only"
repository = "https://github.com/Priler/jarvis"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-message", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hound = "3.5"
seqdiff = "0.3"
vosk = "0.2"
rand = "0.8"
rodio = "0.17"
rustpotter = { git = "https://github.com/GiviMAD/rustpotter.git", tag = "v2.0.0" }
log = "0.4"
once_cell = "1.18"
arc-swap = "1.6"
atomic_enum = "0.2"
portaudio = "0.7"
platform-dirs = "0.3"
simple-log = "1.6"
serde_yaml = "0.9"
kira = "0.8"
porcupine = "0.2"
cpal = "0.15"
anyhow = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = []
